--- a/glavnookno.ui
+++ b/glavnookno.ui
@@ -158,7 +158,7 @@ border:0;</string>
          <x>0</x>
          <y>0</y>
          <width>796</width>
-         <height>582</height>
+         <height>591</height>
         </rect>
        </property>
       </widget>
@@ -172,7 +172,7 @@ border:0;</string>
      <x>0</x>
      <y>0</y>
      <width>816</width>
-     <height>22</height>
+     <height>19</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuRa_unovodstvo">
@@ -217,6 +217,8 @@ border:0;</string>
     <addaction name="action_asovnice"/>
     <addaction name="separator"/>
     <addaction name="actionKuponi"/>
+    <addaction name="separator"/>
+    <addaction name="actionIzhod"/>
    </widget>
    <widget class="QMenu" name="menuNastavitve">
     <property name="title">
@@ -424,6 +426,11 @@ border:0;</string>
   <action name="actionEnote">
    <property name="text">
     <string>Enote</string>
+   </property>
+  </action>
+  <action name="actionIzhod">
+   <property name="text">
+    <string>Izhod</string>
    </property>
   </action>
  </widget>
