--- a/sif_enote.ui
+++ b/sif_enote.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>sif_enote</class>
  <widget class="QDialog" name="sif_enote">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Šifrant enot za storitve</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
