--- a/razlog_stornacije.ui
+++ b/razlog_stornacije.ui
@@ -63,6 +63,13 @@
        </property>
       </widget>
      </item>
+     <item>
+      <widget class="QPushButton" name="btn_izhod">
+       <property name="text">
+        <string>Izhod</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
   </layout>
