--- a/racun.ui
+++ b/racun.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>757</width>
+    <width>1111</width>
     <height>708</height>
    </rect>
   </property>
@@ -41,8 +41,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>702</width>
-            <height>751</height>
+            <width>1056</width>
+            <height>800</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -975,6 +975,30 @@
            </widget>
           </item>
          </layout>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="tab_dobropis">
+      <attribute name="title">
+       <string>Opravila</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout_7">
+       <item>
+        <widget class="QScrollArea" name="scr_dobropis">
+         <property name="widgetResizable">
+          <bool>true</bool>
+         </property>
+         <widget class="QWidget" name="scrollAreaWidgetContents_2">
+          <property name="geometry">
+           <rect>
+            <x>0</x>
+            <y>0</y>
+            <width>1069</width>
+            <height>504</height>
+           </rect>
+          </property>
+         </widget>
         </widget>
        </item>
       </layout>
