--- a/wid_dobropis.ui
+++ b/wid_dobropis.ui
@@ -1,14 +1,12 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <author/>
- <comment/>
- <exportmacro/>
  <class>wid_dobropis</class>
- <widget name="wid_dobropis" class="QWidget">
+ <widget class="QWidget" name="wid_dobropis">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>992</width>
+    <width>1016</width>
     <height>633</height>
    </rect>
   </property>
@@ -407,8 +405,8 @@
      </property>
      <property name="sizeHint" stdset="0">
       <size>
-       <width>20</width>
-       <height>37</height>
+       <width>17</width>
+       <height>34</height>
       </size>
      </property>
     </spacer>
@@ -449,4 +447,3 @@
  <resources/>
  <connections/>
 </ui>
-
