--- a/vizitka.ui
+++ b/vizitka.ui
@@ -6,14 +6,14 @@
    <enum>Qt::ApplicationModal</enum>
   </property>
   <property name="enabled">
-   <bool>false</bool>
+   <bool>true</bool>
   </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>766</width>
-    <height>767</height>
+    <width>770</width>
+    <height>749</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,8 +23,8 @@
    <iconset>
     <normaloff>srcek.svg</normaloff>srcek.svg</iconset>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+  <layout class="QVBoxLayout" name="verticalLayout_2">
+   <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <layout class="QVBoxLayout" name="verticalLayout">
@@ -54,45 +54,13 @@
       <layout class="QVBoxLayout" name="verticalLayout_3">
        <item>
         <layout class="QFormLayout" name="formLayout_2">
+         <property name="fieldGrowthPolicy">
+          <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+         </property>
          <item row="0" column="0">
           <widget class="QLabel" name="label">
            <property name="text">
             <string>Ime programa</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="0">
-          <widget class="QLabel" name="label_2">
-           <property name="text">
-            <string>Različica programa</string>
-           </property>
-          </widget>
-         </item>
-         <item row="4" column="0">
-          <widget class="QLabel" name="label_3">
-           <property name="text">
-            <string>Avtor</string>
-           </property>
-          </widget>
-         </item>
-         <item row="7" column="0">
-          <widget class="QLabel" name="label_4">
-           <property name="text">
-            <string>Pogoji uporabe</string>
-           </property>
-          </widget>
-         </item>
-         <item row="6" column="0">
-          <widget class="QLabel" name="label_5">
-           <property name="text">
-            <string>Novosti</string>
-           </property>
-          </widget>
-         </item>
-         <item row="5" column="0">
-          <widget class="QLabel" name="label_6">
-           <property name="text">
-            <string>Predstavitev</string>
            </property>
           </widget>
          </item>
@@ -106,6 +74,13 @@
            </property>
           </widget>
          </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="label_2">
+           <property name="text">
+            <string>Različica programa</string>
+           </property>
+          </widget>
+         </item>
          <item row="1" column="1">
           <widget class="QLineEdit" name="txt_razlicica_programa">
            <property name="enabled">
@@ -116,45 +91,17 @@
            </property>
           </widget>
          </item>
-         <item row="4" column="1">
-          <widget class="QLineEdit" name="txt_avtor_programa">
-           <property name="enabled">
-            <bool>false</bool>
-           </property>
+         <item row="2" column="0">
+          <widget class="QLabel" name="label_8">
            <property name="text">
-            <string>Pr' Bubijih</string>
+            <string>Datum posodobitve programa</string>
            </property>
           </widget>
          </item>
-         <item row="5" column="1">
-          <widget class="QPlainTextEdit" name="txt_predstavitev_programa">
+         <item row="2" column="1">
+          <widget class="QLineEdit" name="txt_datum_posodobitve_programa">
            <property name="enabled">
             <bool>false</bool>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>300</width>
-             <height>200</height>
-            </size>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>16777215</width>
-             <height>100</height>
-            </size>
-           </property>
-          </widget>
-         </item>
-         <item row="7" column="1">
-          <widget class="QPlainTextEdit" name="txt_pogoji_uporabe">
-           <property name="enabled">
-            <bool>false</bool>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>16777215</width>
-             <height>150</height>
-            </size>
            </property>
           </widget>
          </item>
@@ -172,18 +119,98 @@
            </property>
           </widget>
          </item>
-         <item row="2" column="1">
-          <widget class="QLineEdit" name="txt_datum_posodobitve_programa"/>
-         </item>
-         <item row="2" column="0">
-          <widget class="QLabel" name="label_8">
+         <item row="4" column="0">
+          <widget class="QLabel" name="label_3">
            <property name="text">
-            <string>Datum posodobitve programa</string>
+            <string>Avtor</string>
            </property>
           </widget>
          </item>
-         <item row="6" column="1">
-          <widget class="QPlainTextEdit" name="txt_novosti"/>
+         <item row="4" column="1">
+          <widget class="QLineEdit" name="txt_avtor_programa">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+           <property name="text">
+            <string>Pr' Bubijih</string>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="0">
+          <widget class="QLabel" name="label_6">
+           <property name="text">
+            <string>Predstavitev</string>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="1">
+          <widget class="QPlainTextEdit" name="txt_predstavitev_programa">
+           <property name="enabled">
+            <bool>true</bool>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>300</width>
+             <height>200</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>100</height>
+            </size>
+           </property>
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <layout class="QFormLayout" name="formLayout">
+         <item row="0" column="0">
+          <widget class="QLabel" name="label_5">
+           <property name="text">
+            <string>Novosti</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QLabel" name="label_4">
+           <property name="text">
+            <string>Pogoji uporabe</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QPlainTextEdit" name="txt_novosti">
+           <property name="minimumSize">
+            <size>
+             <width>350</width>
+             <height>300</height>
+            </size>
+           </property>
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QPlainTextEdit" name="txt_pogoji_uporabe">
+           <property name="enabled">
+            <bool>true</bool>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>350</width>
+             <height>300</height>
+            </size>
+           </property>
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
+          </widget>
          </item>
         </layout>
        </item>
@@ -198,7 +225,6 @@
   <tabstop>txt_razlicica_programa</tabstop>
   <tabstop>txt_avtor_programa</tabstop>
   <tabstop>txt_predstavitev_programa</tabstop>
-  <tabstop>txt_pogoji_uporabe</tabstop>
  </tabstops>
  <resources/>
  <connections/>
