DODAJ KOPIRANJE POTNEGA NALOGA
closes #150

--- a/wid_potninalogi.ui
+++ b/wid_potninalogi.ui
@@ -107,6 +107,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="btn_duplikat">
+       <property name="text">
+        <string>Kopiraj nalog</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="btn_refresh">
        <property name="text">
         <string>Osveži</string>
