--- a/sif_delavniki.ui
+++ b/sif_delavniki.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>239</width>
-    <height>150</height>
+    <width>483</width>
+    <height>366</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -63,8 +63,8 @@
         </layout>
        </item>
        <item>
-        <widget class="QLineEdit" name="txt_status">
-         <property name="text">
+        <widget class="QPlainTextEdit" name="txt_status">
+         <property name="plainText">
           <string>txt_status</string>
          </property>
         </widget>
