DODANA MOŽNOST IZBRISA DELOVNIH DNI ZA OBSTOJEČE LETO, ČE LE-TO NIMA PRAVIH
Včasih se na roko vnesejo podatki o delovnih dnevih, ki bi jih program
moral vnesti avtomatsko. Posledično jih ne osveži ob zahtevku, saj jih
ne prepozna.

closes #156

--- a/sif_delavniki.ui
+++ b/sif_delavniki.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>483</width>
-    <height>366</height>
+    <height>471</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -25,6 +25,46 @@
     <layout class="QHBoxLayout" name="horizontalLayout_3">
      <item>
       <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_4">
+         <item>
+          <widget class="QComboBox" name="txt_leto">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>150</width>
+             <height>0</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="btn_brisi">
+           <property name="text">
+            <string>Izbriši</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_5">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
+       </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_2">
          <item>
@@ -85,19 +125,6 @@
       </spacer>
      </item>
     </layout>
-   </item>
-   <item>
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>21</height>
-      </size>
-     </property>
-    </spacer>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
